--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
                 font-size: 12px;
             }
 
+            .folderText {
+              font-size: 11px!important;
+            }
+
             footer p {
                 font-size: 12px;
             }
@@ -168,7 +172,7 @@
             <p>Ejecuta el siguiente comando para crear el archivo de release de la app:</p>
             <code>ionic cordova build android --release</code>
             <p>El archivo APK se generará en la siguiente ruta:</p>
-            <code>C:\Users\UserName\Documents\proyectos\app-EFAST\app\platforms\android\app\build\outputs\apk\release</code>
+            <code class="folderText">C:\Users\UserName\Documents\proyectos\app-EFAST\app\platforms\android\app\build\outputs\apk\release</code>
         </div>
 
         <div class="step">
